--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-webview": "^13.12.2",
     "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "uuid": "^10.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
