--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-reanimated": "^3.15.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.12.2",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
